<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.saracawley.mathdrills.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="center"
            style="@style/homeTitleText"
            android:text="@string/addition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/addition_beginner"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:text="@string/beginner"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_addition_beginner"
                    style="@style/timeTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/addition_intermediate"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/intermediate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_addition_intermediate"
                    style="@style/timeTheme"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/addition_advanced"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/advanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_addition_advanced"
                    style="@style/timeTheme"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:textAlignment="center"
            style="@style/homeTitleText"
            android:text="@string/subtraction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/subtraction_beginner"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:text="@string/beginner"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_subtraction_beginner"
                    style="@style/timeTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/subtraction_intermediate"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/intermediate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_subtraction_intermediate"
                    style="@style/timeTheme"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/subtraction_advanced"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/advanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_subtraction_advanced"
                    style="@style/timeTheme"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:textAlignment="center"
            style="@style/homeTitleText"
            android:text="@string/multiplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/multiplication_beginner"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:text="@string/beginner"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_multiplication_beginner"
                    style="@style/timeTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/multiplication_intermediate"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/intermediate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_multiplication_intermediate"
                    style="@style/timeTheme"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/multiplication_advanced"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/advanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_multiply_advanced"
                    style="@style/timeTheme"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:textAlignment="center"
            style="@style/homeTitleText"
            android:text="@string/division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/division_beginner"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:text="@string/beginner"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_division_beginner"
                    style="@style/timeTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/division_intermediate"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/intermediate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_division_intermediate"
                    style="@style/timeTheme"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/division_advanced"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/homeBodyText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/advanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/time_division_advanced"
                    style="@style/timeTheme"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
